// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RulesGenerator > RulesGenerator generates rules correctly > byCategory 1`] = `
{
  "/Users/dkVinBri/Development/eslint-plugin-oxlint/src/rules-by-category.ts": "// These rules are automatically generated by scripts/generate-rules.ts

const styleRules = {
  'rulename-with-mod': 'off',
};

const correctnessRules = {
  '@typescript-eslint/rulename-without-mod': 'off',
};

export { styleRules, correctnessRules };
",
  "/Users/dkVinBri/Development/eslint-plugin-oxlint/src/rules-by-scope.ts": "// These rules are automatically generated by scripts/generate-rules.ts

const eslintRules = {
  'rulename-with-mod': 'off',
};

const typescriptRules = {
  '@typescript-eslint/rulename-without-mod': 'off',
};

export { eslintRules, typescriptRules };
",
}
`;

exports[`RulesGenerator > RulesGenerator generates rules correctly > byScope 1`] = `
{
  "/Users/dkVinBri/Development/eslint-plugin-oxlint/src/rules-by-scope.ts": "// These rules are automatically generated by scripts/generate-rules.ts

const eslintRules = {
  'rulename-with-mod': 'off',
};

const typescriptRules = {
  '@typescript-eslint/rulename-without-mod': 'off',
};

export { eslintRules, typescriptRules };
",
}
`;
